Make tables responsive

--- a/index.html
+++ b/index.html
@@ -298,28 +298,6 @@
                                         </div>
                                     </li>
                                     <li class="col-2 skill-item">
-                                        <h3>Github</h3>
-                                        <div class="chart chart__9">
-                                            <svg class="circle-chart" viewbox="0 0 33.83098862 33.83098862" width="65"
-                                                height="65" xmlns="http://www.w3.org/2000/svg">
-                                                <circle class="circle-chart__background" stroke="#efefef"
-                                                    stroke-width="2" fill="none" cx="16.91549431" cy="16.91549431"
-                                                    r="15.91549431" />
-                                                <circle class="circle-chart__circle" stroke="#00acc1" stroke-width="2"
-                                                    stroke-dasharray="90,100" stroke-linecap="round" fill="none"
-                                                    cx="16.91549431" cy="16.91549431" r="15.91549431" />
-                                                <g class="circle-chart__info">
-                                                    <text class="circle-chart__percent" x="16.91549431" y="15.5"
-                                                        alignment-baseline="central" text-anchor="middle"
-                                                        font-size="8">90%</text>
-                                                    <text class="circle-chart__subline" x="16.91549431" y="20.5"
-                                                        alignment-baseline="central" text-anchor="middle"
-                                                        font-size="2"></text>
-                                                </g>
-                                            </svg>
-                                        </div>
-                                    </li>
-                                    <li class="col-2 skill-item">
                                         <h3>Vscode</h3>
                                         <div class="chart chart__10">
                                             <svg class="circle-chart" viewbox="0 0 33.83098862 33.83098862" width="65"
@@ -490,37 +468,39 @@
             <div class="wrapper">
                 <div class="experience__work">
                     <div>
-                        <h2>Work Experience</h2>
-                        <table class="table table__experience">
-                            <tr class="row">
-                                <td class="experience__date col-2">2016 - 2019</td>
-                                <td class="col-2">Majesty's Pleasure</td>
-                                <td class="col-2">Nail Aesthetician</td>
-                                <td class="experience__info col-6">
+                        <h2 class="section-title">Work Experience</h2>
+                        <div class="table table__experience row">
+                            <div class="table__row">
+                                <div class="experience__date table__col table__col--2">2016 - 2019</div>
+                                <div class="table__col table__col--2">Majesty's Pleasure</div>
+                                <div class="table__col table__col--2">Nail Aesthetician</div>
+                                <div class="experience__info table__col table__col--6">
                                     During my position at Majesty's Pleasure, I worked closely with a team to ensure
                                     that we
                                     provide
                                     equivalent customer services. Having great creativity skills helped to build and
                                     maintain
                                     client
-                                    relationships through exceptional customer service.</td>
-                            </tr>
-                            <tr class="row">
-                                <td class="experience__date col-2">2019 - 2020</td>
-                                <td class="col-2">Ritual Hair Skin Beauty</td>
-                                <td class="col-2">Nail Aesthetician</td>
-                                <td class="experience__info col-6">I was delivering high-quality service to
+                                    relationships through exceptional customer service.</div>
+                            </div>
+                            <div class="table__row">
+                                <div class="experience__date table__col table__col--2">2019 - 2020</div>
+                                <div class="table__col table__col--2">Ritual Hair Skin Beauty</div>
+                                <div class="table__col table__col--2">Nail Aesthetician</div>
+                                <div class="experience__info table__col table__col--6">I was delivering high-quality
+                                    service to
                                     customers.
                                     Assisted in
                                     promoting the spa’s
                                     retail
-                                    offerings by recommending a variety of care products.</td>
-                            </tr>
-                            <tr class="row">
-                                <td class="experience__date col-2">2015 - 2016</td>
-                                <td class="col-2">UniCall Central and Eastern Europe</td>
-                                <td class="col-2">Call Center Operator</td>
-                                <td class="experience__info col-6">I learnt how to identify client needs and to find
+                                    offerings by recommending a variety of care products.</div>
+                            </div>
+                            <div class="table__row">
+                                <div class="experience__date table__col table__col--2">2015 - 2016</div>
+                                <div class="table__col table__col--2">UniCall Central and Eastern Europe</div>
+                                <div class="table__col table__col--2">Call Center Operator</div>
+                                <div class="experience__info table__col table__col--6">I learnt how to identify client
+                                    needs and to find
                                     quickly creative
                                     solutions/alternatives to
                                     issues. Fluency in multiple languages helped me to collaborate with others and
@@ -529,51 +509,52 @@
                                     to product development. In addition, I have excellent organizational skills that
                                     allowed
                                     to
-                                    enhance work efficiency but also satisfy more clients requests.</td>
-                            </tr>
-                        </table>
+                                    enhance work efficiency but also satisfy more clients requests.</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <section id="education" class="education">
+                <div id="education" class="education">
                     <div class="education__info">
-                        <h2>Education</h2>
-                        <table class="table table__education">
-                            <tr class="row">
-                                <td class="experience__date  col-2">(2012 - 2015)</td>
-                                <td class="col-4">
+                        <h2 class="section-title">Education</h2>
+                        <div class="table table__education row">
+                            <div class="table__row">
+                                <div class="experience__date  table__col table__col--2">(2012 - 2015)</div>
+                                <div class="table__col table__col--4">
                                     <p>University of Information Technology and Management in Rzeszow</p>
                                     <p class="education__degree">Bachelor's degree in a field Hotel, Motel, and
                                         Restaurant Management</p>
-                                </td>
-                                <td class="experience__info col-6">Lorem ipsum, dolor sit amet
+                                </div>
+                                <div class="experience__info table__col table__col--6">Lorem ipsum, dolor sit amet
                                     consectetur adipisicing elit.
                                     Quos, vero! Velit magnam beatae dolorum minima necessitatibus repudiandae,
-                                    voluptatem cupiditate. Laboriosam.</td>
-                            </tr>
-                            <tr class="row">
-                                <td class="experience__date col-2">(2019 - 2020)</td>
-                                <td class="col-4">
+                                    voluptatem cupiditate. Laboriosam.</div>
+                            </div>
+                            <div class="table__row">
+                                <div class="experience__date table__col table__col--2">(2019 - 2020)</div>
+                                <div class="table__col table__col--4">
                                     <p>Juno College of Technology</p>
                                     <p class="education__degree">Post secondary education</p>
-                                </td>
-                                <td class="experience__info col-6">Juno is a Private Career College
+                                </div>
+                                <div class="experience__info table__col table__col--6">Juno is a Private Career College
                                     located in downtown Toronto
                                     that runs
                                     nine-week
                                     full-time
-                                    bootcamps to train web developers on the most up-to-date skills, including
+                                    bootcamps to divain web developers on the most up-to-date skills, including
                                     HTML5,
                                     CSS3,
-                                    responsive design, JavaScript, jQuery, APIs and React</td>
-                            </tr>
-                        </table>
+                                    responsive design, JavaScript, jQuery, APIs and React</div>
+                            </div>
+                        </div>
                     </div>
-                </section>
+                </div>
             </div>
         </section>
         <section id="portfolio" data-letter="h">
             <div class="portfolio">
                 <div class="wrapper">
+                    <h2 class="section-title">Portfolio</h2>
                     <ul class="portfolio__list row">
                         <li class="portfolio__item col-4">
                             <div class="image__container">
@@ -581,9 +562,9 @@
                                 <a href="https://github.com/yuli-ana/yuliana-hazda-project-one" target="_blank"
                                     rel="noreferrer noopener">
                                     <div class="overlay">
-                                        <div class="overlay__title row">
-                                            <i class="col-2 fas fa-chevron-circle-right"></i>
-                                            <h3 class="col-10">Arora</h3>
+                                        <div class="overlay__title">
+                                            <i class="fas fa-chevron-circle-right"></i>
+                                            <h3>Arora</h3>
                                         </div>
                                         <ul class="overlay__list row">
                                             <li class="overlay__item col-1"><i class="fab fa-html5"></i></li>
@@ -601,9 +582,9 @@
                                 <a href="https://github.com/yuli-ana/yuliana-hazda-project-two" target="_blank"
                                     rel="noreferrer noopener">
                                     <div class="overlay">
-                                        <div class="overlay__title row">
-                                            <i class="col-2 fas fa-chevron-circle-right"></i>
-                                            <h3 class="col-10">Captured</h3>
+                                        <div class="overlay__title">
+                                            <i class="fas fa-chevron-circle-right"></i>
+                                            <h3>Captured</h3>
                                         </div>
                                         <ul class="overlay__list row">
                                             <li class="overlay__item col-1"><i class="fab fa-html5"></i></li>
@@ -622,9 +603,9 @@
                                 <a href="https://github.com/yuli-ana/yulianaHazdaProjectThree" target="_blank"
                                     rel="noreferrer noopener">
                                     <div class="overlay">
-                                        <div class="overlay__title row">
-                                            <i class="col-2 fas fa-chevron-circle-right"></i>
-                                            <h3 class="col-10">Vscode shortcut PRO</h3>
+                                        <div class="overlay__title">
+                                            <i class="fas fa-chevron-circle-right"></i>
+                                            <h3>Vscode shortcut PRO</h3>
                                         </div>
                                         <ul class="overlay__list row">
                                             <li class="overlay__item col-1"><i class="fab fa-html5"></i></li>
@@ -652,9 +633,9 @@
                                 <a href="https://github.com/Yuliana-Lawrence/travelAsk" target="_blank"
                                     rel="noreferrer noopener">
                                     <div class="overlay">
-                                        <div class="overlay__title row">
-                                            <i class="col-2 fas fa-chevron-circle-right"></i>
-                                            <h3 class="col-10">travelAsk</h3>
+                                        <div class="overlay__title">
+                                            <i class="fas fa-chevron-circle-right"></i>
+                                            <h3>travelAsk</h3>
                                         </div>
                                         <ul class="overlay__list row">
                                             <li class="overlay__item col-1"><i class="fab fa-html5"></i></li>
@@ -699,9 +680,9 @@
                                 <a href="https://github.com/yuli-ana/kombucha-lab" target="_blank"
                                     rel="noreferrer noopener">
                                     <div class="overlay">
-                                        <div class="overlay__title row">
-                                            <i class="col-2 fas fa-chevron-circle-right"></i>
-                                            <h3 class="col-10">Kombucha Lab</h3>
+                                        <div class="overlay__title">
+                                            <i class="fas fa-chevron-circle-right"></i>
+                                            <h3>Kombucha Lab</h3>
                                         </div>
                                         <ul class="overlay__list row">
                                             <li class="overlay__item col-1"><i class="fab fa-html5"></i></li>
@@ -748,9 +729,9 @@
                                 <a href="https://github.com/shopper-mapper/shopper-mapper" target="_blank"
                                     rel="noreferrer noopener">
                                     <div class="overlay">
-                                        <div class="overlay__title row">
-                                            <i class="col-2 fas fa-chevron-circle-right"></i>
-                                            <h3 class="col-10">Shopper-mapper</h3>
+                                        <div class="overlay__title">
+                                            <i class="fas fa-chevron-circle-right"></i>
+                                            <h3>Shopper-mapper</h3>
                                         </div>
                                         <ul class="overlay__list row">
                                             <li class="overlay__item col-1"><i class="fab fa-html5"></i></li>
