--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@
                             <div class="col-auto">
                                 <button class="btn btn__menu"><i class="fas fa-bars"></i></button>
                             </div>
-                            <div class="col-11">
+                            <div class="col-11 nav__dropdown">
                                 <ul class="nav__list">
-                                    <li class="nav__item col-2"><a href="#home">home</a></li>
-                                    <li class="nav__item col-2"><a href="#about">about</a></li>
-                                    <li class="nav__item col-2"><a href="#experience">experience</a></li>
-                                    <li class="nav__item col-2"><a href="#portfolio">portfolio</a></li>
+                                    <li class="nav__item col-2"><a href="/#home">home</a></li>
+                                    <li class="nav__item col-2"><a href="/#about">about</a></li>
+                                    <li class="nav__item col-2"><a href="/#experience">experience</a></li>
+                                    <li class="nav__item col-2"><a href="/#portfolio">portfolio</a></li>
+                                    <li class="nav__item col-2"><a href="/#contact">contact</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -81,7 +82,7 @@
 
         </div>
         <button class="btn btn__contact">
-            <span class="scroll__hint scroll__hint--right">c</span>
+            <span class="scroll__hint scroll__hint--right">contact</span>
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="80px"
                 height="214px">
                 <path fill-rule="evenodd" fill="rgb(95, 158, 160)"
@@ -94,7 +95,7 @@
         </button>
 
         <button class="btn btn__about">
-            <span class="scroll__hint scroll__hint--left">a</span>
+            <span class="scroll__hint scroll__hint--left">About</span>
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="80px"
                 height="80px">
                 <path fill-rule="evenodd" fill="rgb(95, 158, 160)"
@@ -105,7 +106,7 @@
 
 
     <main>
-        <section id="about" data-letter="e">
+        <section id="about" data-letter="Experience">
             <div class="wrapper">
                 <div class="about">
                     <div class="row row--column">
@@ -464,7 +465,7 @@
                 </div>
             </div>
         </section>
-        <section id="experience" class="experience" data-letter="p">
+        <section id="experience" class="experience" data-letter="Portfolio">
             <div class="wrapper">
                 <div class="experience__work">
                     <div>
@@ -551,7 +552,7 @@
                 </div>
             </div>
         </section>
-        <section id="portfolio" data-letter="h">
+        <section id="portfolio" data-letter="Home">
             <div class="portfolio">
                 <div class="wrapper">
                     <h2 class="section-title">Portfolio</h2>
@@ -770,7 +771,7 @@
     </main>
 
     <footer id="footer">
-        <div class="footer">
+        <div class="footer" id="contact">
             <div class="row row--column">
                 <div class="col-12">
                     <div class="footer__title">
