Fix image for iOS browsers

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
                     <div class="header">
                         <div class="col col-5">
                             <div class="header__image row">
-                                <img class="col-6" src="./assets/portfolio-2.jpg" alt="">
+                                <div class="col-6">
+                                    <img src="./assets/portfolio-2.jpg" alt="">
+                                </div>
                             </div>
                             <div>
                                 <h1>Yuliana Hazda</h1>
