Update projects links

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <div class="col col-5">
                             <div class="header__image row">
                                 <div class="col-6">
-                                    <img src="./assets/portfolio-2.jpg" alt="">
+                                    <img src="./assets/portfolio-1.jpg" alt="">
                                 </div>
                             </div>
                             <div>
@@ -115,11 +115,12 @@
                         <div class="col-8 about__profile">
                             <div class="about__intro">
                                 <h2>About me</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias aspernatur rem,
-                                    quibusdam suscipit eveniet reiciendis, sunt facere id magnam vitae molestias
-                                    similique voluptatum aliquam. Beatae quidem tenetur, expedita distinctio at aut id
-                                    possimus ab recusandae, ipsam dolor dicta harum vitae cumque aperiam architecto
-                                    dolorum aliquam? Debitis dignissimos atque tempora molestias?</p>
+                                <p>I'm a motivated junior Front-end Developer with a passion for web applications.
+                                    Currently, I'm finishing Bootcamp at Juno College. Working as a Nail
+                                    Aesthetician in the past I have developed great creative skills. That helped me
+                                    create interesting useful projects so others can benefit from them.
+                                    I'm truly curious about learning new technologies and always looking for an
+                                    opportunity to grow.</p>
                             </div>
                             <div class="about__skills">
                                 <h2>Skills</h2>
@@ -528,10 +529,10 @@
                                     <p class="education__degree">Bachelor's degree in a field Hotel, Motel, and
                                         Restaurant Management</p>
                                 </div>
-                                <div class="experience__info table__col table__col--6">Lorem ipsum, dolor sit amet
-                                    consectetur adipisicing elit.
-                                    Quos, vero! Velit magnam beatae dolorum minima necessitatibus repudiandae,
-                                    voluptatem cupiditate. Laboriosam.</div>
+                                <div class="experience__info table__col table__col--6">University of Information
+                                    Technology and Management is located in Rzeszow, Poland. UITM is recognized for high
+                                    level of internationalization: significant share of foreign students, international
+                                    staff, English programmes.</div>
                             </div>
                             <div class="table__row">
                                 <div class="experience__date table__col table__col--2">(2019 - 2020)</div>
@@ -562,7 +563,7 @@
                         <li class="portfolio__item col-4">
                             <div class="image__container">
                                 <img src="./assets/project-1.jpg" alt="">
-                                <a href="https://github.com/yuli-ana/yuliana-hazda-project-one" target="_blank"
+                                <a href="https://yuli-ana.github.io/yuliana-hazda-project-one/" target="_blank"
                                     rel="noreferrer noopener">
                                     <div class="overlay">
                                         <div class="overlay__title">
@@ -582,7 +583,7 @@
                         <li class="portfolio__item col-4">
                             <div class="image__container">
                                 <img src="./assets/project-2.jpg" alt="">
-                                <a href="https://github.com/yuli-ana/yuliana-hazda-project-two" target="_blank"
+                                <a href="https://yuli-ana.github.io/yuliana-hazda-project-two/" target="_blank"
                                     rel="noreferrer noopener">
                                     <div class="overlay">
                                         <div class="overlay__title">
@@ -603,7 +604,7 @@
                         <li class="portfolio__item col-4">
                             <div class="image__container">
                                 <img src="./assets/project-3.jpg" alt="">
-                                <a href="https://github.com/yuli-ana/yulianaHazdaProjectThree" target="_blank"
+                                <a href="https://yuli-ana.github.io/yulianaHazdaProjectThree/" target="_blank"
                                     rel="noreferrer noopener">
                                     <div class="overlay">
                                         <div class="overlay__title">
@@ -633,7 +634,7 @@
                         <li class="portfolio__item col-4">
                             <div class="image__container">
                                 <img src="./assets/project-4.jpg" alt="">
-                                <a href="https://github.com/Yuliana-Lawrence/travelAsk" target="_blank"
+                                <a href="https://yuliana-lawrence.github.io/travelAsk/" target="_blank"
                                     rel="noreferrer noopener">
                                     <div class="overlay">
                                         <div class="overlay__title">
@@ -680,7 +681,7 @@
                         <li class="portfolio__item col-4">
                             <div class="image__container">
                                 <img src="./assets/project-5.jpg" alt="">
-                                <a href="https://github.com/yuli-ana/kombucha-lab" target="_blank"
+                                <a href="https://yuli-ana.github.io/kombucha-lab/" target="_blank"
                                     rel="noreferrer noopener">
                                     <div class="overlay">
                                         <div class="overlay__title">
@@ -729,7 +730,7 @@
                         <li class="portfolio__item col-4 class=">
                             <div class="image__container">
                                 <img src="./assets/project-6.jpg" alt="">
-                                <a href="https://github.com/shopper-mapper/shopper-mapper" target="_blank"
+                                <a href="https://shopper-mapper.github.io/shopper-mapper/" target="_blank"
                                     rel="noreferrer noopener">
                                     <div class="overlay">
                                         <div class="overlay__title">
