Update success message

--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
                         </label>
                     </div>
                     <div class="form__success">
-                        <p>Thanks for contact. I will reach out to you shortly!</p>
+                        <p>Thank you for reaching out to me. I will contact you shortly!</p>
                     </div>
                     <div class="form__item">
                         <label class="sr-only" for="name">Name:</label>
