Update font-size property, replace with mixin

--- a/index.html
+++ b/index.html
@@ -115,12 +115,8 @@
                         <div class="col-8 about__profile">
                             <div class="about__intro">
                                 <h2>About me</h2>
-                                <p>I'm a motivated junior Front-end Developer with a passion for web applications.
-                                    Currently, I'm finishing Bootcamp at Juno College. Working as a Nail
-                                    Aesthetician in the past I have developed great creative skills. That helped me
-                                    create interesting useful projects so others can benefit from them.
-                                    I'm truly curious about learning new technologies and always looking for an
-                                    opportunity to grow.</p>
+                                <p>I'm Toronto based Fron-End Developer focused on crafting clean and user friendly
+                                    experience.</p>
                             </div>
                             <div class="about__skills">
                                 <h2>Skills</h2>
@@ -559,6 +555,7 @@
             <div class="portfolio">
                 <div class="wrapper">
                     <h2 class="section-title">Portfolio</h2>
+                    <p class="portfolio__description">Below you can see some projects I've been working on lately.</p>
                     <ul class="portfolio__list row">
                         <li class="portfolio__item col-4">
                             <div class="image__container">
