Update experience section

--- a/index.html
+++ b/index.html
@@ -478,10 +478,10 @@
                                     During my position at Majesty's Pleasure, I worked closely with a team to ensure
                                     that we
                                     provide
-                                    equivalent customer services. Having great creativity skills helped to build and
-                                    maintain
-                                    client
-                                    relationships through exceptional customer service.</div>
+                                    equivalent customer services. Also, I trained and mentorship
+                                    junior aestheticians. As a senior nail aesthetician, I was helping a team to learn
+                                    new
+                                    techniques.</div>
                             </div>
                             <div class="table__row">
                                 <div class="experience__date table__col table__col--2">2019 - 2020</div>
@@ -499,17 +499,10 @@
                                 <div class="experience__date table__col table__col--2">2015 - 2016</div>
                                 <div class="table__col table__col--2">UniCall Central and Eastern Europe</div>
                                 <div class="table__col table__col--2">Call Center Operator</div>
-                                <div class="experience__info table__col table__col--6">I learnt how to identify client
-                                    needs and to find
-                                    quickly creative
-                                    solutions/alternatives to
-                                    issues. Fluency in multiple languages helped me to collaborate with others and
-                                    contribute
-                                    more
-                                    to product development. In addition, I have excellent organizational skills that
-                                    allowed
-                                    to
-                                    enhance work efficiency but also satisfy more clients requests.</div>
+                                <div class="experience__info table__col table__col--6">The main responsibility was to
+                                    ensure the highest standards of customer care. Fluency in multiple languages helped
+                                    me to collaborate with others and
+                                    contribute more to product development.</div>
                             </div>
                         </div>
                     </div>
