Add resume file, update html, update gitignore

--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
                                 </ul>
                             </div>
                             <div class="header__button row">
-                                <button class="col-6 btn btn__resume">resume</button>
+                                <a href="https://yuliana.dev/files/yuliana-hazda-resume.pdf" download
+                                    class="col-6 btn btn__resume">resume</a>
                             </div>
                         </div>
                     </div>
