Update html & styles

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             </div>
                             <div class="header__button row">
                                 <a href="https://yuliana.dev/files/yuliana-hazda-resume.pdf" download
-                                    class="col-6 btn btn__resume">resume</a>
+                                    class="col-6 btn btn__resume"><i class="fas fa-download"></i></i>resume</a>
                             </div>
                         </div>
                     </div>
