Add favicon, update title element

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Poppins&family=Prata&family=Roboto&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/5dbe99caa8.js" crossorigin="anonymous"></script>
-    <title>Portfolio</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon_io/favicon-32x32.png">
+    <title>Yuliana Hazda</title>
 </head>
 
 <body>
