Update html (typo)

--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                                 <h3>Languages</h3>
                                 <ul>
                                     <li>
-                                        <p>English (Fluent</p>
+                                        <p>English (Fluent)</p>
                                     </li>
                                     <li>
                                         <p>Russian (Fluent)</p>
