--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                 </div>
                             </div>
                             <div>
-                                <h1>Yuliana Hazda</h1>
+                                <h1>Hi, I'm Yuliana!</h1>
                                 <h2>Front - End Developer</h2>
                             </div>
                             <div class="header__icons">
@@ -466,7 +466,7 @@
                 </div>
             </div>
         </section>
-        <section id="experience" class="experience" data-letter="Portfolio">
+        <!-- <section id="experience" class="experience" data-letter="Portfolio">
             <div class="wrapper">
                 <div class="experience__work">
                     <div>
@@ -545,7 +545,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <section id="portfolio" data-letter="Home">
             <div class="portfolio">
                 <div class="wrapper">
