--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                 </div>
                             </div>
                             <div>
-                                <h1>Hi, I'm Yuliana!</h1>
+                                <h1>Hi, I'm <span class="title-name">Yuliana</span>!</h1>
                                 <h2>Front - End Developer</h2>
                             </div>
                             <div class="header__icons">
