Add hover states, update close btn in footer section

--- a/index.html
+++ b/index.html
@@ -771,7 +771,7 @@
                 <div class="col-12">
                     <div class="footer__title">
                         <h2 class="col-auto">Contact</h2>
-                        <button type="button" class="col-auto btn btn__circle"><i class="far fa-circle"></i></button>
+                        <button type="button" class="col-auto btn btn__circle"><i class="fas fa-times"></i></button>
                     </div>
                 </div>
                 <form class="col-12 form" name="contact" method="POST" data-netlify="true" action="/#contact"
