--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <div class="col col-5">
                             <div class="header__image row">
                                 <div class="col-6">
-                                    <img src="./assets/portfolio-1.jpg" alt="">
+                                    <img src="./assets/portfolio-1.jpg" alt="Smiling girl on background of green trees">
                                 </div>
                             </div>
                             <div>
