--- a/index.html
+++ b/index.html
@@ -773,31 +773,35 @@
                         <h2 class="col-auto">Contact</h2>
                         <button type="button" class="col-auto btn btn__circle"><i class="fas fa-times"></i></button>
                     </div>
+                    <form class="col-12 form" name="contact" method="POST" data-netlify="true" action="/#contact"
+                        netlify-honeypot="bot-field">
+                        <div hidden aria-hidden="true">
+                            <label>
+                                Don’t fill this out if you're human:
+                                <input name="bot-field" />
+                            </label>
+                        </div>
+                        <div class="form__success">
+                            <p>Thank you for reaching out to me. I will contact you shortly!</p>
+                        </div>
+                        <div class="form__item">
+                            <label class="sr-only" for="name">Name:</label>
+                            <input class="input__name" type="text" name="name" id="name" placeholder="Name" required>
+                        </div>
+                        <div class="form__item">
+                            <label class="sr-only" for="">Email</label>
+                            <input class="input__name" type="email" name="email" id="email" placeholder="E-mail"
+                                required>
+                        </div>
+                        <div class="form__item">
+                            <textarea name="massage" placeholder="Message"></textarea>
+                        </div>
+                        <button class="btn btn__send" type="submit">send</button>
+                    </form>
                 </div>
-                <form class="col-12 form" name="contact" method="POST" data-netlify="true" action="/#contact"
-                    netlify-honeypot="bot-field">
-                    <div hidden aria-hidden="true">
-                        <label>
-                            Don’t fill this out if you're human:
-                            <input name="bot-field" />
-                        </label>
-                    </div>
-                    <div class="form__success">
-                        <p>Thank you for reaching out to me. I will contact you shortly!</p>
-                    </div>
-                    <div class="form__item">
-                        <label class="sr-only" for="name">Name:</label>
-                        <input class="input__name" type="text" name="name" id="name" placeholder="Name" required>
-                    </div>
-                    <div class="form__item">
-                        <label class="sr-only" for="">Email</label>
-                        <input class="input__name" type="email" name="email" id="email" placeholder="E-mail" required>
-                    </div>
-                    <div class="form__item">
-                        <textarea name="massage" placeholder="Message"></textarea>
-                    </div>
-                    <button class="btn btn__send" type="submit">send</button>
-                </form>
+                <div class="col-12">
+                    <p class="copyright">&copy; 2020 Yuliana Hazda | All Rights Reserved</p>
+                </div>
             </div>
         </div>
     </footer>
