Update about section

--- a/index.html
+++ b/index.html
@@ -117,8 +117,7 @@
                         <div class="col-8 about__profile">
                             <div class="about__intro">
                                 <h2>About me</h2>
-                                <p>I'm Toronto based Fron-End Developer focused on crafting clean and user friendly
-                                    experience.</p>
+                                <p>I'm Toronto based Front-End Developer focused on crafting clean and user-friendly experience. I'm extremely passionate about web development. Coding for me is more than the knowledge, it helps me to express my creativity and potential. I truly love what I do, as every day there is something new and exciting to learn.</p>
                             </div>
                             <div class="about__skills">
                                 <h2>Skills</h2>
