--- a/index.html
+++ b/index.html
@@ -117,7 +117,10 @@
                         <div class="col-8 about__profile">
                             <div class="about__intro">
                                 <h2>About me</h2>
-                                <p>I'm Toronto based Front-End Developer focused on crafting clean and user-friendly experience. I'm extremely passionate about web development. Coding for me is more than the knowledge, it helps me to express my creativity and potential. I truly love what I do, as every day there is something new and exciting to learn.</p>
+                                <p>I'm Toronto based Front-End Developer focused on crafting clean and user-friendly
+                                    experience. I'm extremely passionate about web development. Coding for me is more
+                                    than the knowledge, it helps me to express my creativity and potential. I truly love
+                                    what I do, as every day there is something new and exciting to learn.</p>
                             </div>
                             <div class="about__skills">
                                 <h2>Skills</h2>
@@ -131,12 +134,12 @@
                                                     stroke-width="2" fill="none" cx="16.91549431" cy="16.91549431"
                                                     r="15.91549431" />
                                                 <circle class="circle-chart__circle" stroke="#00acc1" stroke-width="2"
-                                                    stroke-dasharray="90,100" stroke-linecap="round" fill="none"
+                                                    stroke-dasharray="80,100" stroke-linecap="round" fill="none"
                                                     cx="16.91549431" cy="16.91549431" r="15.91549431" />
                                                 <g class="circle-chart__info">
                                                     <text class="circle-chart__percent" x="16.91549431" y="15.5"
                                                         alignment-baseline="central" text-anchor="middle"
-                                                        font-size="8">90%</text>
+                                                        font-size="8">80%</text>
                                                     <text class="circle-chart__subline" x="16.91549431" y="20.5"
                                                         alignment-baseline="central" text-anchor="middle"
                                                         font-size="2"></text>
@@ -153,12 +156,12 @@
                                                     stroke-width="2" fill="none" cx="16.91549431" cy="16.91549431"
                                                     r="15.91549431" />
                                                 <circle class="circle-chart__circle" stroke="#00acc1" stroke-width="2"
-                                                    stroke-dasharray="85,100" stroke-linecap="round" fill="none"
+                                                    stroke-dasharray="70,100" stroke-linecap="round" fill="none"
                                                     cx="16.91549431" cy="16.91549431" r="15.91549431" />
                                                 <g class="circle-chart__info">
                                                     <text class="circle-chart__percent" x="16.91549431" y="15.5"
                                                         alignment-baseline="central" text-anchor="middle"
-                                                        font-size="8">85%</text>
+                                                        font-size="8">70%</text>
                                                     <text class="circle-chart__subline" x="16.91549431" y="20.5"
                                                         alignment-baseline="central" text-anchor="middle"
                                                         font-size="2"></text>
@@ -175,12 +178,12 @@
                                                     stroke-width="2" fill="none" cx="16.91549431" cy="16.91549431"
                                                     r="15.91549431" />
                                                 <circle class="circle-chart__circle" stroke="#00acc1" stroke-width="2"
-                                                    stroke-dasharray="90,100" stroke-linecap="round" fill="none"
+                                                    stroke-dasharray="70,100" stroke-linecap="round" fill="none"
                                                     cx="16.91549431" cy="16.91549431" r="15.91549431" />
                                                 <g class="circle-chart__info">
                                                     <text class="circle-chart__percent" x="16.91549431" y="15.5"
                                                         alignment-baseline="central" text-anchor="middle"
-                                                        font-size="8">90%</text>
+                                                        font-size="8">70%</text>
                                                     <text class="circle-chart__subline" x="16.91549431" y="20.5"
                                                         alignment-baseline="central" text-anchor="middle"
                                                         font-size="2"></text>
@@ -241,12 +244,12 @@
                                                     stroke-width="2" fill="none" cx="16.91549431" cy="16.91549431"
                                                     r="15.91549431" />
                                                 <circle class="circle-chart__circle" stroke="#00acc1" stroke-width="2"
-                                                    stroke-dasharray="70,100" stroke-linecap="round" fill="none"
+                                                    stroke-dasharray="65,100" stroke-linecap="round" fill="none"
                                                     cx="16.91549431" cy="16.91549431" r="15.91549431" />
                                                 <g class="circle-chart__info">
                                                     <text class="circle-chart__percent" x="16.91549431" y="15.5"
                                                         alignment-baseline="central" text-anchor="middle"
-                                                        font-size="8">70%</text>
+                                                        font-size="8">65%</text>
                                                     <text class="circle-chart__subline" x="16.91549431" y="20.5"
                                                         alignment-baseline="central" text-anchor="middle"
                                                         font-size="2"></text>
@@ -263,12 +266,12 @@
                                                     stroke-width="2" fill="none" cx="16.91549431" cy="16.91549431"
                                                     r="15.91549431" />
                                                 <circle class="circle-chart__circle" stroke="#00acc1" stroke-width="2"
-                                                    stroke-dasharray="80,100" stroke-linecap="round" fill="none"
+                                                    stroke-dasharray="50,100" stroke-linecap="round" fill="none"
                                                     cx="16.91549431" cy="16.91549431" r="15.91549431" />
                                                 <g class="circle-chart__info">
                                                     <text class="circle-chart__percent" x="16.91549431" y="15.5"
                                                         alignment-baseline="central" text-anchor="middle"
-                                                        font-size="8">80%</text>
+                                                        font-size="8">50%</text>
                                                     <text class="circle-chart__subline" x="16.91549431" y="20.5"
                                                         alignment-baseline="central" text-anchor="middle"
                                                         font-size="2"></text>
@@ -285,12 +288,12 @@
                                                     stroke-width="2" fill="none" cx="16.91549431" cy="16.91549431"
                                                     r="15.91549431" />
                                                 <circle class="circle-chart__circle" stroke="#00acc1" stroke-width="2"
-                                                    stroke-dasharray="80,100" stroke-linecap="round" fill="none"
+                                                    stroke-dasharray="70,100" stroke-linecap="round" fill="none"
                                                     cx="16.91549431" cy="16.91549431" r="15.91549431" />
                                                 <g class="circle-chart__info">
                                                     <text class="circle-chart__percent" x="16.91549431" y="15.5"
                                                         alignment-baseline="central" text-anchor="middle"
-                                                        font-size="8">80%</text>
+                                                        font-size="8">70%</text>
                                                     <text class="circle-chart__subline" x="16.91549431" y="20.5"
                                                         alignment-baseline="central" text-anchor="middle"
                                                         font-size="2"></text>
@@ -307,12 +310,12 @@
                                                     stroke-width="2" fill="none" cx="16.91549431" cy="16.91549431"
                                                     r="15.91549431" />
                                                 <circle class="circle-chart__circle" stroke="#00acc1" stroke-width="2"
-                                                    stroke-dasharray="90,100" stroke-linecap="round" fill="none"
+                                                    stroke-dasharray="85,100" stroke-linecap="round" fill="none"
                                                     cx="16.91549431" cy="16.91549431" r="15.91549431" />
                                                 <g class="circle-chart__info">
                                                     <text class="circle-chart__percent" x="16.91549431" y="15.5"
                                                         alignment-baseline="central" text-anchor="middle"
-                                                        font-size="8">90%</text>
+                                                        font-size="8">85%</text>
                                                     <text class="circle-chart__subline" x="16.91549431" y="20.5"
                                                         alignment-baseline="central" text-anchor="middle"
                                                         font-size="2"></text>
@@ -329,12 +332,12 @@
                                                     stroke-width="2" fill="none" cx="16.91549431" cy="16.91549431"
                                                     r="15.91549431" />
                                                 <circle class="circle-chart__circle" stroke="#00acc1" stroke-width="2"
-                                                    stroke-dasharray="80,100" stroke-linecap="round" fill="none"
+                                                    stroke-dasharray="75,100" stroke-linecap="round" fill="none"
                                                     cx="16.91549431" cy="16.91549431" r="15.91549431" />
                                                 <g class="circle-chart__info">
                                                     <text class="circle-chart__percent" x="16.91549431" y="15.5"
                                                         alignment-baseline="central" text-anchor="middle"
-                                                        font-size="8">80%</text>
+                                                        font-size="8">75%</text>
                                                     <text class="circle-chart__subline" x="16.91549431" y="20.5"
                                                         alignment-baseline="central" text-anchor="middle"
                                                         font-size="2"></text>
@@ -351,12 +354,12 @@
                                                     stroke-width="2" fill="none" cx="16.91549431" cy="16.91549431"
                                                     r="15.91549431" />
                                                 <circle class="circle-chart__circle" stroke="#00acc1" stroke-width="2"
-                                                    stroke-dasharray="80,100" stroke-linecap="round" fill="none"
+                                                    stroke-dasharray="85,100" stroke-linecap="round" fill="none"
                                                     cx="16.91549431" cy="16.91549431" r="15.91549431" />
                                                 <g class="circle-chart__info">
                                                     <text class="circle-chart__percent" x="16.91549431" y="15.5"
                                                         alignment-baseline="central" text-anchor="middle"
-                                                        font-size="8">80%</text>
+                                                        font-size="8">85%</text>
                                                     <text class="circle-chart__subline" x="16.91549431" y="20.5"
                                                         alignment-baseline="central" text-anchor="middle"
                                                         font-size="2"></text>
@@ -373,12 +376,12 @@
                                                     stroke-width="2" fill="none" cx="16.91549431" cy="16.91549431"
                                                     r="15.91549431" />
                                                 <circle class="circle-chart__circle" stroke="#00acc1" stroke-width="2"
-                                                    stroke-dasharray="60,100" stroke-linecap="round" fill="none"
+                                                    stroke-dasharray="65,100" stroke-linecap="round" fill="none"
                                                     cx="16.91549431" cy="16.91549431" r="15.91549431" />
                                                 <g class="circle-chart__info">
                                                     <text class="circle-chart__percent" x="16.91549431" y="15.5"
                                                         alignment-baseline="central" text-anchor="middle"
-                                                        font-size="8">60%</text>
+                                                        font-size="8">65%</text>
                                                     <text class="circle-chart__subline" x="16.91549431" y="20.5"
                                                         alignment-baseline="central" text-anchor="middle"
                                                         font-size="2"></text>
