--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                 <h2>About me</h2>
                                 <p>I'm Toronto based Front-End Developer focused on crafting clean and user-friendly
                                     experience. I'm extremely passionate about web development. Coding for me is more
-                                    than the knowledge, it helps me to express my creativity and potential. I truly love
+                                    than knowledge, it helps me to express my creativity and potential. I truly love
                                     what I do, as every day there is something new and exciting to learn.</p>
                             </div>
                             <div class="about__skills">
