--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                                 <ul class="nav__list">
                                     <li class="nav__item col-2"><a href="/#home">home</a></li>
                                     <li class="nav__item col-2"><a href="/#about">about</a></li>
-                                    <li class="nav__item col-2"><a href="/#experience">experience</a></li>
                                     <li class="nav__item col-2"><a href="/#portfolio">portfolio</a></li>
                                     <li class="nav__item col-2"><a href="/#contact">contact</a></li>
+                                    <!-- <li class="nav__item col-2"><a href="/#experience">experience</a></li> -->
                                 </ul>
                             </div>
                         </div>
