Update scroll indicator

--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="scroll-indicator">
-                    <div class="dots"></div>
+                <div class="scroll-type1">
                 </div>
             </header>
 
