--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <body>
 
     <div class="parent">
+        <div id="particles-js" class="particles-js"></div>
         <!-- navigation -->
         <div class="offcanvas__wrap" id="home">
             <nav>
@@ -32,7 +33,6 @@
                                     <li class="nav__item col-2"><a href="/#about">about</a></li>
                                     <li class="nav__item col-2"><a href="/#portfolio">portfolio</a></li>
                                     <li class="nav__item col-2"><a href="/#contact">contact</a></li>
-                                    <!-- <li class="nav__item col-2"><a href="/#experience">experience</a></li> -->
                                 </ul>
                             </div>
                         </div>
@@ -52,7 +52,7 @@
                             </div>
                             <div>
                                 <h1>Hi, I'm <span class="title-name">Yuliana</span>!</h1>
-                                <h2>Front - End Developer</h2>
+                                <!-- <h2>Front - End Developer</h2> -->
                             </div>
                             <div class="header__icons">
                                 <ul class="header__list">
@@ -602,6 +602,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script></script>
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
     <script src="./js/main.js"></script>
 </body>
 
