--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <div class="col col-5">
                             <div class="header__image row">
                                 <div class="col-6">
-                                    <img src="./assets/portfolio-1.jpg" alt="Smiling girl on background of green trees">
+                                    <img src="./assets/portfolio-1.jpg" alt="Smiling girl on a background of blue sky">
                                 </div>
                             </div>
                             <div>
